--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <h1 id="resultado"></h1>
         </div>
 </div>
+	<footer>
+	   <h3>
+	    <a href="https://github.com/gabdelc/diff21"> repositorio en Github</a>
+	    </h3>
+	</footer>
 
 	
 </body>
